createk8syaml-maven-plugin v0.0.6-SNAPSHOT git changelog

2020-09-19 15:43:02 +0100    [skip ci] [maven-release-plugin] prepare for next development iteration (CI Build)

createk8syaml-maven-plugin-0.0.5
2020-09-19 15:42:57 +0100    [skip ci] [maven-release-plugin] prepare release createk8syaml-maven-plugin-0.0.5 (CI Build)
2020-09-19 15:41:11 +0100    java documentation update (Parj M)
2020-09-19 15:31:13 +0100    [skip ci] [maven-release-plugin] prepare for next development iteration (CI Build)

createk8syaml-maven-plugin-0.0.4
2020-09-19 15:31:08 +0100    [skip ci] [maven-release-plugin] prepare release createk8syaml-maven-plugin-0.0.4 (CI Build)
2020-09-19 15:26:46 +0100    Readme updates (Parj M)
2020-09-19 14:58:30 +0100    Added support for deploy and rendering templates outside (Parj M)
2020-09-03 09:31:07 +0100    Added github io link (GitHub)
2020-09-03 09:28:33 +0100    Corrected spelling (GitHub)
2020-09-03 09:28:10 +0100    Updated links on readme (GitHub)
2020-09-02 18:24:27 +0100    [skip ci] [maven-release-plugin] prepare for next development iteration (CI Build)

createk8syaml-maven-plugin-0.0.3
2020-09-02 18:24:22 +0100    [skip ci] [maven-release-plugin] prepare release createk8syaml-maven-plugin-0.0.3 (CI Build)
2020-09-02 18:21:24 +0100    Updated usage (Parj M)
2020-09-02 18:17:28 +0100    Disabled site plugin (Parj M)
2020-09-02 18:15:16 +0100    Added support for readiness, liveness probe (Parj M)
2020-09-01 16:49:48 +0100    Added support for github pages (Parj M)
2020-09-01 15:56:42 +0100    [skip ci] Added syntax highlighting (Parj M)
2020-09-01 15:50:19 +0100    [skip ci] Updated documentation and added BADGE (Parj M)
2020-09-01 15:40:10 +0100    [skip ci] Updated circleci to ignore gh-pages branch (Parj M)
2020-09-01 15:19:36 +0100    [skip ci] [maven-release-plugin] prepare for next development iteration (CI Build)

createk8syaml-maven-plugin-0.0.2