@@ -1,5 +1,6 @@
 [
-    { "id":"76bce70b68aadad4a3f8b27ad556cd62a99e2e56", "message":"[skip ci] [maven-release-plugin] prepare for next development iteration", "authorName":"CI Build", "authorEmail":"ci@io.github.parjanya.org", "committerName":"CI Build", "committerEmail":"ci@io.github.parjanya.org", "date":"2020-09-19 15:43:02 +0100", "tags":[] }
+    { "id":"09ae6cdb3a6affa02d50534ab2ea58a52df0cbdc", "message":"Updated version number", "authorName":"Parj M", "authorEmail":"dork.github@gmail.com", "committerName":"Parj M", "committerEmail":"dork.github@gmail.com", "date":"2020-09-19 15:57:06 +0100", "tags":[] }
+  , { "id":"76bce70b68aadad4a3f8b27ad556cd62a99e2e56", "message":"[skip ci] [maven-release-plugin] prepare for next development iteration", "authorName":"CI Build", "authorEmail":"ci@io.github.parjanya.org", "committerName":"CI Build", "committerEmail":"ci@io.github.parjanya.org", "date":"2020-09-19 15:43:02 +0100", "tags":[] }
   , { "id":"f4394297fbb9d2541797173d67ae4331840dee48", "message":"[skip ci] [maven-release-plugin] prepare release createk8syaml-maven-plugin-0.0.5", "authorName":"CI Build", "authorEmail":"ci@io.github.parjanya.org", "committerName":"CI Build", "committerEmail":"ci@io.github.parjanya.org", "date":"2020-09-19 15:42:57 +0100", "tags":[ { "name":"createk8syaml-maven-plugin-0.0.5" } ] }
   , { "id":"1aaff1151771c8bd9286b52a5c7c353f70f9bdef", "message":"java documentation update", "authorName":"Parj M", "authorEmail":"dork.github@gmail.com", "committerName":"Parj M", "committerEmail":"dork.github@gmail.com", "date":"2020-09-19 15:41:11 +0100", "tags":[] }
   , { "id":"e08b54a055f2b59f7d24d2c78c3064097354f798", "message":"[skip ci] [maven-release-plugin] prepare for next development iteration", "authorName":"CI Build", "authorEmail":"ci@io.github.parjanya.org", "committerName":"CI Build", "committerEmail":"ci@io.github.parjanya.org", "date":"2020-09-19 15:31:13 +0100", "tags":[] }
