@@ -42,6 +42,7 @@
 
 	<table class="changelog">
 		<tbody>
+		<tr><td class="date">2020-09-19 15:57:06 +0100</td><td><span class="committer">(Parj M)</span></td><td>Updated version number</td></tr>
 		<tr><td class="date">2020-09-19 15:43:02 +0100</td><td><span class="committer">(CI Build)</span></td><td>[skip ci] [maven-release-plugin] prepare for next development iteration</td></tr>
 		<tr class="tag"><td colspan="3">createk8syaml-maven-plugin-0.0.5</td></tr>
 		<tr><td class="date">2020-09-19 15:42:57 +0100</td><td><span class="committer">(CI Build)</span></td><td>[skip ci] [maven-release-plugin] prepare release createk8syaml-maven-plugin-0.0.5</td></tr>
