@@ -123,7 +123,7 @@
             &lt;plugin&gt;
                 &lt;groupId&gt;io.github.parj&lt;/groupId&gt;
                 &lt;artifactId&gt;createk8syaml-maven-plugin&lt;/artifactId&gt;
-                &lt;version&gt;0.0.3&lt;/version&gt;
+                &lt;version&gt;0.0.5&lt;/version&gt;
                 &lt;configuration&gt;
                     &lt;namespace&gt;thisisaspace&lt;/namespace&gt;
                     &lt;image&gt;gcr.io/etc&lt;/image&gt;
@@ -215,7 +215,7 @@
 <div class="source"><pre class="prettyprint">            &lt;plugin&gt;
                 &lt;groupId&gt;io.github.parj&lt;/groupId&gt;
                 &lt;artifactId&gt;createk8syaml-maven-plugin&lt;/artifactId&gt;
-                &lt;version&gt;0.0.3&lt;/version&gt;
+                &lt;version&gt;0.0.5&lt;/version&gt;
                 &lt;configuration&gt;
                     &lt;namespace&gt;thisisaspace&lt;/namespace&gt;
                     &lt;image&gt;${docker.image}&lt;/image&gt;
